--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permision android:name="amdroid.permision.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -34,6 +34,10 @@
             android:exported="true"
             android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
         <activity
+            android:name=".ui.content.Home"
+            android:exported="true"
+            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
+        <activity
             android:name=".ui.splashscreen.SplashScreen"
             android:exported="true"
             android:theme="@style/Theme.Project_Pemob_Techie.Splash">
@@ -45,7 +49,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name" />
+            />
     </application>
 
 </manifest>
