--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
             android:name=".ui.content.BookDetails"
             android:exported="true"
             android:theme="@style/Theme.Project_Pemob_Techie.FullScreen"/>
+        <activity android:name=".ui.cart.CartActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
         <activity
             android:name=".ui.content.Home"
             android:exported="true"
