--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
             android:exported="true"
             android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
 
-
+        <activity android:name=".ui.genre.GenreChoosedActivity" />
 
 
 
