--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:exported="true"
             android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
         <activity
+            android:name=".ui.login.VerifyEmail_ChangePW"
+            android:exported="true"
+            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
+        <activity
             android:name=".ui.login.Signup"
             android:exported="true"
             android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
