--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
 
         <activity android:name=".ui.genre.GenreChoosedActivity" />
 
-
+        <activity android:name=".ui.cart.CheckoutActivity" />
+        <activity android:name=".ui.cart.ConfirmationActivity" />
 
         <activity
             android:name=".ui.splashscreen.SplashScreen"
