Rating & Review on Details Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,7 @@
         <activity android:name=".ui.history.OngoingActivity"/>
         <activity android:name=".ui.history.CompletedActivity" />
         <activity android:name=".ui.history.RatingReviewActivity" />
+        <activity android:name=".ui.content.RatingReviewsActivity"/>
 
 
         <activity
