--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,55 +20,42 @@
         tools:targetApi="31">
 
         <activity android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".ui.login.VerifyEmail"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
+            android:exported="true" />
         <activity
             android:name=".ui.login.VerifyEmail_ChangePW"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
+            android:exported="true" />
         <activity
             android:name=".ui.login.Signup"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
+            android:exported="true" />
         <activity
             android:name=".ui.login.Login"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
+            android:exported="true" />
         <activity
             android:name=".ui.login.LoginSignup"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
+            android:exported="true" />
 
         <activity
             android:name=".ui.content.BookDetails"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen"/>
+            android:exported="true" />
         <activity android:name=".ui.cart.CartActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
-
+            android:exported="true" />
         <activity android:name=".ui.genre.GenreActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen"/>
-
+            android:exported="true" />
         <activity
             android:name=".ui.content.SearchResultActivity"
             android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen"
             android:windowSoftInputMode="adjustPan"/>
-
         <activity android:name=".ui.account.EditProfileActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.FullScreen" />
-
+            android:exported="true" />
         <activity android:name=".ui.genre.GenreChoosedActivity" />
         <activity android:name=".ui.home.Shipping" />
         <activity android:name=".ui.cart.CheckoutActivity" />
@@ -85,8 +72,7 @@
 
         <activity
             android:name=".ui.splashscreen.SplashScreen"
-            android:exported="true"
-            android:theme="@style/Theme.Project_Pemob_Techie.Splash">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
