--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,12 @@
 
         <activity android:name=".MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustPan">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/Theme.Project_Pemob_Techie.Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.login.VerifyEmail"
@@ -72,7 +73,8 @@
 
         <activity
             android:name=".ui.splashscreen.SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Project_Pemob_Techie.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
